--- a/index.html
+++ b/index.html
@@ -4,6 +4,29 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Unqiue path</title>
+      <link rel="stylesheet" href="styles.css" />
    </head>
-   <body></body>
+   <body>
+      <header>
+         <ul>
+            <li>
+               <h3>Row:</h3>
+               <input type="number" id="row-input" class="boxes" max="20" value="2" />
+            </li>
+            <li>
+               <h3>Column:</h3>
+               <input type="number" id="col-input" class="boxes" max="20" value="2" />
+            </li>
+            <li>
+               <h3 id="enter-button">Enter</h3>
+            </li>
+         </ul>
+      </header>
+      <main>
+         <ul></ul>
+      </main>
+      <footer>
+         <h1>Simulate</h1>
+      </footer>
+   </body>
 </html>
