done with styling

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
          <ul></ul>
       </main>
       <footer>
-         <h1>Simulate</h1>
+         <h1 id="simulate-button">Simulate</h1>
       </footer>
    </body>
 </html>
