adding javascript DOM to grab elements

--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Unqiue path</title>
       <link rel="stylesheet" href="styles.css" />
+      <script src="app.js" defer></script>
    </head>
    <body>
       <header>
          <ul>
             <li>
                <h3>Row:</h3>
-               <input type="number" id="row-input" class="boxes" max="20" value="2" />
+               <input type="number" id="row-input" class="boxes" max="25" min="2" required />
             </li>
             <li>
                <h3>Column:</h3>
-               <input type="number" id="col-input" class="boxes" max="20" value="2" />
+               <input type="number" id="col-input" class="boxes" max="25" min="2" required />
             </li>
             <li>
                <h3 id="enter-button">Enter</h3>
