made the grid work in html

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
          <ul>
             <li>
                <h3>Row:</h3>
-               <input type="number" id="row-input" class="boxes" max="25" min="2" required />
+               <input type="number" id="row-input" class="boxes" max="25" min="2" required value="2" />
             </li>
             <li>
                <h3>Column:</h3>
-               <input type="number" id="col-input" class="boxes" max="25" min="2" required />
+               <input type="number" id="col-input" class="boxes" max="25" min="2" required value="2" />
             </li>
             <li>
                <h3 id="enter-button">Enter</h3>
