--- a/index.html
+++ b/index.html
@@ -28,21 +28,25 @@
       </main>
       <footer>
          <h1 id="simulate-button">Simulate</h1>
-         <section id="disclaimer">
-            <h3>
-               Program above is a simulation of the problem
-               <a href="https://leetcode.com/problems/unique-paths/description/">leetcode/unique-paths</a>.
-               The green block represents the robot that will travel in a red trailed path.
-            </h3>
-            <h3>
-               It follows a recursive and backtracking path using function call stack which is visualized
-               above.
-            </h3>
-            <h3 id="note">
-               Note: The program does not solve the problem, rather visualizes how backtracking would look in
-               practice.
-            </h3>
-         </section>
+         <div id="path-counter">
+            <h3>Path discovered:</h3>
+            <input type="text" class="boxes" readonly value="0" />
+         </div>
       </footer>
+      <section id="disclaimer">
+         <h3>
+            Program above is a simulation of the problem
+            <a target="_blank" href="https://leetcode.com/problems/unique-paths/description/"
+               >leetcode/unique-paths</a
+            >. The green block represents the robot that will travel in a red trailed path.
+         </h3>
+         <h3>
+            It follows a recursive and backtracking path using function call stack which is visualized above.
+         </h3>
+         <h3 id="note">
+            Note: The program does not solve the problem, rather visualizes how backtracking would look in
+            practice.
+         </h3>
+      </section>
    </body>
 </html>
