fixed bugs related to path-counter variable

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             >. The green block represents the robot that will travel in a red trailed path.
          </h3>
          <h3>
-            It follows a recursive and backtracking path using function call stack which is visualized above.
+            It follows a recursive path and backtracks to find unique path everytime it reaches destination
+            which is visualized above.
          </h3>
          <h3 id="note">
             Note: The program does not solve the problem, rather visualizes how backtracking would look in
