added minor adjustments to html texts

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
       </footer>
       <section id="disclaimer">
          <h3>
-            Program above is a simulation of the problem
+            The program above is a simulation of the problem
             <a target="_blank" href="https://leetcode.com/problems/unique-paths/description/"
                >leetcode/unique-paths</a
             >. The green block represents the robot that will travel in a red trailed path.
          </h3>
          <h3>
-            It follows a recursive path and backtracks to find unique path everytime it reaches destination
-            which is visualized above.
+            It follows a recursive path and backtracks to find a unique path every time it reaches its
+            destination.
          </h3>
          <h3 id="note">
             Note: The program does not solve the problem, rather visualizes how backtracking would look in
