--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
             The program above is a simulation of the problem
             <a target="_blank" href="https://leetcode.com/problems/unique-paths/description/"
                >leetcode/unique-paths</a
-            >. The green block represents the robot that will travel in a red trailed path.
+            >. The green block represents the robot that will travel in a red-trailed path.
          </h3>
          <h3>
             It follows a recursive path and backtracks to find a unique path every time it reaches its
             destination.
          </h3>
          <h3 id="note">
-            Note: The program does not solve the problem, rather visualizes how backtracking would look in
-            practice.
+            Note: The program uses recursion and backtracking for visual purposes only, the actual problem can be solved using Dynamic 
+            programming or Combinatorics. 
          </h3>
       </section>
    </body>
