fixed all bugs related to obstacle selection

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             destination.
          </h3>
          <h3 id="note">
-            Note: The program uses recursion and backtracking for visual purposes only, the actual problem can be solved using Dynamic 
-            programming or Combinatorics. 
+            Note: The program uses recursion and backtracking for visual purposes only, the actual problem can
+            be solved using Dynamic programming or Combinatorics.
          </h3>
       </section>
    </body>
