finished redesigning and text adjustments

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
       <section id="disclaimer">
          <h3>
             The program above is a simulation of the problem
-            <a target="_blank" href="https://leetcode.com/problems/unique-paths/description/"
-               >leetcode/unique-paths</a
+            <a target="_blank" href="https://leetcode.com/problems/unique-paths-ii/"
+               >leetcode/unique-paths-II</a
             >. The green block represents the robot that will travel in a red-trailed path.
          </h3>
          <h3>
-            It follows a recursive path and backtracks to find a unique path every time it reaches its
-            destination.
+            The grid has selectable obstacles, it dodges these obstacles to find its destination. It follows a
+            recursive path and backtracks to find a unique path.
          </h3>
          <h3 id="note">
             Note: The program uses recursion and backtracking for visual purposes only, the actual problem can
