Code refactored, added grid-config module ,and completed the project

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
          </h3>
          <h3 id="note">
             Note: The program uses recursion and backtracking for visual purposes only, the actual problem can
-            be solved using Dynamic programming or Combinatorics.
+            be solved using Dynamic programming.
          </h3>
       </section>
    </body>
